# http-requests-viewer

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
example/: settings.py  urls.py
src/http_requests_viewer/: apps.py  extractor.py  forms.py  models.py  urls.py  views.py
src/http_requests_viewer/migrations/: 0001_initial.py
src/http_requests_viewer/profile/: DevToolsActivePort  Local State  chrome_shutdown_ms.txt
src/http_requests_viewer/profile/Default/: Cookies  Favicons  History  History Provider Cache  Preferences  QuotaManager  Visited Links  Web Data
src/http_requests_viewer/profile/Default/Cache/index-dir/: the-real-index
src/http_requests_viewer/profile/Default/Extension State/: LOG
src/http_requests_viewer/profile/Default/GPUCache/: index
src/http_requests_viewer/profile/Default/Session Storage/: LOG
src/http_requests_viewer/profile/Default/Sessions/: Session_13264782270956646
src/http_requests_viewer/profile/Default/Site Characteristics Database/: LOG
src/http_requests_viewer/profile/Default/data_reduction_proxy_leveldb/: LOG
src/http_requests_viewer/profile/Default/shared_proto_db/: LOG
src/http_requests_viewer/profile/GrShaderCache/GPUCache/: data_0  data_1  index
src/http_requests_viewer/profile/ShaderCache/GPUCache/: index
src/http_requests_viewer/templates/http_requests_viewer/: agent_list_n_create.html  base.html  delete_form.html  nav.html  request_detail.html  target_create.html  target_detail.html  target_list.html
src/http_requests_viewer/templatetags/: http_requests_viewer.py
(+43 files in other folders)
