[metadata]
name = http-requests-viewer
version = 0.1
description = A Django app to view http(s) from a driver session.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tinnguyen18920/http-requests-viewer
author = tinnguyen18920
author_email = tinnguyen18920@gmail.com
license = BSD-3-Clause  
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = true
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    user-agents >= 2.2.0
    selenium >= 3.141.0 
    selenium-wire >= 4.2.4
    django-bootstrap4 >= 3.0.1


[options.packages.find]
where = src